--- a/contact_us.html
+++ b/contact_us.html
@@ -52,14 +52,14 @@
             <a href=https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh> https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh
                 </a> <br>Telegram Group --><a href=https://t.me/remote_coders> https://t.me/remote_coders </a> 
                 </div>
-                <form method='post' name='contact' style='margin-left:2% ;'><input type='hidden' name='form-name' value='contact' />
+                <form method='post' name='contact' netlify />
             <div>
             <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:15px; width: 60%; height: 80px;">
 Type Your Reviews here... 
 Don't forget to mention your name.
             </textarea>
             </div>
-            <input type="submit" value="Submit">
+            <button type="submit">Send</button>
             </form>   
                 
                     <!--|||||||||||||||||||||----COPYRIGHTED AREA-----||||||||||||||||||||||||||||||||||||||||||||||||||||-->
