--- a/contact_us.html
+++ b/contact_us.html
@@ -52,6 +52,8 @@
             <a href=https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh> https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh
                 </a> <br>Telegram Group --><a href=https://t.me/remote_coders> https://t.me/remote_coders </a> 
                 </div>
+    <h2> Share your some reviews</h2>
+    
                 <form name='contact' netlify>
             <div>
             <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:15px; width: 60%; height: 80px;">
