--- a/supporters.html
+++ b/supporters.html
@@ -46,14 +46,13 @@
             </li>
         </ul>
     </nav>
+
     <!--||||||||||||||||||||||| Abut us heading--||||||||||||||||||||||||||||||||||||||| -->
-    <div class="animation">
-            <div>
-                <lottie-player src="res/16957-comming-soon.gif"
-                    background="transparent" speed="1" loop autoplay>
-                </lottie-player>
-            </div>
-        </div>
+    
+    <h1 class=text1>
+          Under Development
+    </h1>
+
     <!--|||||||||||||||||||||----COPYRIGHTED AREA-----||||||||||||||||||||||||||||||||||||||||||||||||||||-->
     <div style="background-color:rgb(8, 70, 121);width: 100%; height: 15%; margin-bottom: 0.5%;">
         <h5 style="color: rgb(241, 241, 241);font: 15px; margin-bottom: 2%;">© 2022 Remote Coders( A Community for Hackers and Programmars) <br>by Tanmay
