--- a/contact_us.html
+++ b/contact_us.html
@@ -52,13 +52,14 @@
             <a href=https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh> https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh
                 </a> <br>Telegram Group --><a href=https://t.me/remote_coders> https://t.me/remote_coders </a> 
                 </div>
-    <h2> Share your some reviews</h2>
+    <h2> Share your problems/h2>
     
                 <form name='contact' netlify>
             <div>
             <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:15px; width: 60%; height: 80px;">
-Type Your Reviews here... 
-Don't forget to mention your name.
+Type Your Problems here... 
+Don't forget to mention your name and email.
+
             </textarea>
             </div>
             <button type="submit">Send</button>
