--- a/contact_us.html
+++ b/contact_us.html
@@ -52,7 +52,7 @@
             <a href=https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh> https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh
                 </a> <br>Telegram Group --><a href=https://t.me/remote_coders> https://t.me/remote_coders </a> 
                 </div>
-    <h2> Share your problems/h2>
+    <h2>Share your problems</h2>
     
                 <form name='contact' netlify>
             <div>
