--- a/blogs.html
+++ b/blogs.html
@@ -40,7 +40,7 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h4 class="float-md-start mb-0">Blogs</h4>
+      <h4 class="float-md-start mb-0">Contact Us</h4>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link" aria-current="page" href="index.html">Home</a>
         <a class="nav-link" href="blogs.html">Blogs</a>
@@ -55,31 +55,26 @@
     </div>
   </header>
 
-  <br>
-  <div class="div2">      
-    <h2 style="color: whitesmoke;">
-        How to hide folder or files from windows?
-    </h2>
-    <h3>Step : 1 <a href="Locked and hide.bat"><h3> Download This file</h3></a></h3>
-    <h3>Step : 2 Run this .bat file</h3>
-    <h3>Step : 3 A folder is created named private</h3>
-    <h3>Step : 4 Right click on .bat file and click on edit option and enter your password where you see written Enter Your Password</h3>
-    <h3>Step : 5 Place your files and folder in private folder</h3>
-    <h3>Step : 6 Then close private folder</h3>
-    <h3>Step : 7 Then run .bat file and Enter Y for yes</h3>
-    <h3>Step : 8 To unlock and unhide these files, click on .bat file and enter your password which you enter in step 3</h3>
+  <div class=div2>
+    <img src="res/remote-coders_logo.png" alt="remote-coders" style="width: 250px;">
+    <br>
+    <br>
+    Whatsapp me --><a href=https://wa.me/+916306256015> https://wa.me/+916306256015</a> 
+    <br>Whastapp Group -->
+        <a href=https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh> https://chat.whatsapp.com/IKy4JjNQIvvHZh9VTu5Jxh
+            </a> <br>Telegram Group --><a href=https://t.me/remote_coders> https://t.me/remote_coders </a> 
+            <!-- <form>
+                <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:15px; width: 60%; height: 80px;">
+                Type Your Reviews here... 
+                Don't forget to mention your name.
+                </textarea>
+            </form>  -->
 </div>
 
-    <br>
-    <br>
-      <a href="Download center.html"><button class="glow-on-hover" type="button">Download Center</button></a>
-      <br>
-      <!-- <a href="Download center.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Download Center</a> -->
-
-      <footer class="mt-auto text-white-50">
-        © 2022 Remote Coders(A Community for Hackers and Programmars) <br> by - Tanmay Tiwari
-        <br>
-      </footer>
+<footer class="mt-auto text-white-50">
+  © 2022 Remote Coders(A Community for Hackers and Programmars) <br> by - Tanmay Tiwari
+  <br>
+</footer>
 </div>
 <script src=index.js></script>
 </body>
