--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <main class="px-3">
     <div class="container">
-      <div><img src="res/transparent.png" alt=""></div>
+      <div class="typed-out"><img src="res/transparent.png" alt=""></div>
     </div>
 
     <br>
