--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://www.w3chools.com/lib/w3.css">
+    
 
    <style>
 .left, .right {
