--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <main class="px-3">
     <div class="container">
-      <div class="typed-out"><h2>Web Developer</h2></div>
+      <div class="typed-out"><h2>Remote Coders</h2></div>
     </div>
 
     <br>
