--- a/partners.html
+++ b/partners.html
@@ -54,33 +54,40 @@
       </nav>
     </div>
   </header>
-
-    <div class=div2>
-      <img src="res/cybermaartial.jpg" alt="" style="float: right; width:200px;height:200px;">
-      <h2>Cyber Martial </h2>
-      Owner- Kiran Jadhav aka Ajax Walter <br>
-
-      Enthusiastic Cyber Security Researcher <br>
-
-      Founder Of Cyber Martial <br>
-
-      <a href="https://linktr.ee/TechnicalGuys">https://linktr.ee/TechnicalGuys</a>
-      
-
-
+  <div class="both">
+    <div class="box">
+      <div class="imgBx">
+          <img src="res/cybermaartial.jpg">
+      </div>
+      <div class="content">
+          <h2>cyber maartial <br>
+              <span>Owner - Ajax Walter <br>
+                  Founder Of Cyber Martial <br>
+                  <a href="https://linktr.ee/TechnicalGuys">https://linktr.ee/TechnicalGuys</a></span>
+          </h2>
+      </div>
   </div>
- <br>
-  <div class=div2>
-      <img src="res/hack devs.jpg" alt="" style="float: right; width:200px;height:200px;">
-      <h2>Hack Devs</h2>
-      Owner - MG Hacker<br>
-      Founder Of Hack Devs <br>
-
-      <a href="https://hack-devs.netlify.app">https://hack-devs.netlify.app</a>
+  <div class="box">
+      <div class="imgBx">
+          <img src="res/hack devs.jpg">
+      </div>
+      <div class="content">
+          <h2>Hack Devs<br>
+              <span>Owner - MG Hacker <br>
+                  Founder Of Hack Devs <br>
+                  <a href="https://hack-devs.netlify.app">https://hack-devs.netlify.app</a>
+              </span>
+              
+          </h2>
+      </div>
+  </div> 
   </div>
-
+  <br>
+  <br><br><br>
+  
   <footer class="mt-auto text-white-50">
     © 2022 Remote Coders(A Community for Hackers and Programmars) <br> by - Tanmay Tiwari
+    <br>
     <br>
   </footer>
 </div>
