--- a/about us.html
+++ b/about us.html
@@ -70,7 +70,7 @@
       till now we have more than 400+ members in this community.
       <br> -->
       <br>
-      My goal is to make a big place for programmars and hackers to solve there problem and make this world safe
+      My goal is to make a big place for programmars and hackers to solve their problems and make this world safe
       from cyber attacks.
 
     </div>
